After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699017 - libempathy: Fix build by adding missing math.h header
libempathy: Fix build by adding missing math.h header
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-27 07:41 UTC by Stef Walter
Modified: 2013-05-03 12:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libempathy: Fix build by adding missing math.h header (665 bytes, patch)
2013-04-27 07:41 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-04-27 07:41:43 UTC
make  all-am
make[3]: Entering directory `/data/projects/empathy/libempathy'
  GEN      empathy-enum-types.h
  CC       empathy-utils.lo
empathy-utils.c:42:17: fatal error: pow.h: No such file or directory
 #include <pow.h>
                 ^
compilation terminated.
Comment 1 Stef Walter 2013-04-27 07:41:47 UTC
Created attachment 242642 [details] [review]
libempathy: Fix build by adding missing math.h header
Comment 2 Guillaume Desmottes 2013-05-03 12:18:56 UTC
Attachment 242642 [details] pushed as 63ded64 - libempathy: Fix build by adding missing math.h header
Comment 3 Guillaume Desmottes 2013-05-03 12:20:06 UTC
Thanks for the patch Stef, I merged it to 3.8 and master.