libempathy: Fix build by adding missing math.h header

https://bugzilla.gnome.org/show_bug.cgi?id=699017