libempathy/empathy-utils.c
@@ -39,6 +39,8 @@
 
 #include <extensions/extensions.h>
 
+#include <math.h>
+
 #define DEBUG_FLAG EMPATHY_DEBUG_OTHER
 #include "empathy-debug.h"
 
